[package]
name = "popper"
version = "0.1.0"
authors = ["Roberto L. Delgado <roberto@delgadodev.xyz>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
thiserror = "1.0.38"                             # error handling
rustyline = "12.0"                               # readline library for tab completion
